Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.81***

**** Fix false BLKSEQ on non-unrolled for loop indexes.  [Jeff Winston]

**** Fix block comment not separating identifiers, bug311. [Gene Sullivan]

**** Fix warnings to point to lowest net usage, not upper level ports.

* Verilator 3.810 2011/01/03

**   Add limited support for VPI access to public signals, see docs.

***  Add -F option to read relative option files, bug297. [Neil Hamilton]

***  Support ++,--,+= etc as standalone statements.  [Alex Solomatnikov]

**** When running with VERILATOR_ROOT, optionally find binaries under bin.

**** Suppress WIDTH warnings when adding/subtracting 1'b1.

**   Add -Wall, -Wwarn-style, -Wno-style to enable code style warnings
     that have been added to this release, and disabled by default:

***  With --Wall, add BLKSEQ warning on blocking assignments in seq blocks.

***  With --Wall, add DECLFILENAME warning on modules not matching filename.

***  With --Wall, add DEFPARAM warning on deprecated defparam statements.

***  With --Wall, add IFDEPTH warning on deep if statements.

***  With --Wall, add INCABSPATH warning on `include with absolute paths.

***  With --Wall, add SYNCASYNCNET warning on mixed sync/async reset nets.

***  With --Wall, add UNDRIVEN warning on undriven nets.

***  With --Wall, add UNUSED warning on unused nets.

***  The VARHIDDEN warning is now disabled by default, use -Wall to enable.

* Verilator 3.805 2010/11/02

**** Add warning when directory contains spaces, msg378.  [Salman Sheikh]

**** Fix wrong filename on include file errors, bug289. [Brad Parker]

**** Fix segfault on SystemVerilog "output wire foo=0", bug291.  [Joshua Wise]

**** Fix DPI export name not found, msg369.  [Terry Chen]

* Verilator 3.804 2010/09/20

***  Support tracing/coverage of underscore signals, bug280.  [by Jason McMullan]